@@ -16,7 +16,11 @@ package com.querydsl.codegen;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.codegen.utils.JavaWriter;
-import com.querydsl.codegen.utils.model.*;
+import com.querydsl.codegen.utils.model.ClassType;
+import com.querydsl.codegen.utils.model.Parameter;
+import com.querydsl.codegen.utils.model.SimpleType;
+import com.querydsl.codegen.utils.model.TypeCategory;
+import com.querydsl.codegen.utils.model.Types;
 import com.querydsl.core.annotations.PropertyType;
 import java.io.IOException;
 import java.io.StringWriter;
@@ -40,8 +44,8 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void properties() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     entityType.addProperty(
         new Property(entityType, "b", new ClassType(TypeCategory.BOOLEAN, Boolean.class)));
     entityType.addProperty(
@@ -80,9 +84,9 @@ public class EmbeddableSerializerTest {
     categoryToSuperClass.put(TypeCategory.BOOLEAN, "BooleanPath");
 
     for (Map.Entry<TypeCategory, String> entry : categoryToSuperClass.entrySet()) {
-      StringWriter w = new StringWriter();
-      SimpleType type = new SimpleType(entry.getKey(), "Entity", "", "Entity", false, false);
-      EntityType entityType = new EntityType(type);
+      var w = new StringWriter();
+      var type = new SimpleType(entry.getKey(), "Entity", "", "Entity", false, false);
+      var entityType = new EntityType(type);
       typeMappings.register(entityType, queryTypeFactory.create(entityType));
 
       serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(w));
@@ -94,8 +98,8 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void empty() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
 
     serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
@@ -104,8 +108,8 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void no_package() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
     serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     assertThat(writer.toString()).contains("public class QEntity extends BeanPath<Entity> {");
@@ -114,10 +118,10 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void correct_superclass() throws IOException {
-    SimpleType type =
+    var type =
         new SimpleType(
             TypeCategory.ENTITY, "java.util.Locale", "java.util", "Locale", false, false);
-    EntityType entityType = new EntityType(type);
+    var entityType = new EntityType(type);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
     serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     assertThat(writer.toString()).contains("public class QLocale extends BeanPath<Locale> {");
@@ -126,8 +130,8 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void primitive_array() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     entityType.addProperty(new Property(entityType, "bytes", new ClassType(byte[].class)));
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
     serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
@@ -138,8 +142,8 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void include() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     entityType.addProperty(
         new Property(entityType, "b", new ClassType(TypeCategory.BOOLEAN, Boolean.class)));
     entityType.addProperty(
@@ -159,7 +163,7 @@ public class EmbeddableSerializerTest {
     entityType.addProperty(
         new Property(entityType, "t", new ClassType(TypeCategory.TIME, Time.class)));
 
-    EntityType subType =
+    var subType =
         new EntityType(new SimpleType(TypeCategory.ENTITY, "Entity2", "", "Entity2", false, false));
     subType.include(new Supertype(type, entityType));
 
@@ -172,10 +176,10 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void superType() throws IOException {
-    EntityType superType =
+    var superType =
         new EntityType(new SimpleType(TypeCategory.ENTITY, "Entity2", "", "Entity2", false, false));
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType =
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType =
         new EntityType(type, Collections.singleton(new Supertype(superType, superType)));
     typeMappings.register(superType, queryTypeFactory.create(superType));
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
@@ -187,9 +191,9 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void delegates() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
-    Delegate delegate =
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
+    var delegate =
         new Delegate(type, type, "test", Collections.<Parameter>emptyList(), Types.STRING);
     entityType.addDelegate(delegate);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
@@ -201,24 +205,24 @@ public class EmbeddableSerializerTest {
 
   @Test
   public void defaultGeneratedAnnotation() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
 
     serializer.serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
-    final String generatedSource = writer.toString();
+    final var generatedSource = writer.toString();
     assertThat(generatedSource)
-        .contains(
-            String.format("import %s;", GeneratedAnnotationResolver.resolveDefault().getName()));
+        .contains("import %s;".formatted(GeneratedAnnotationResolver.resolveDefault().getName()));
     assertThat(generatedSource)
-        .contains("@Generated(\"com.querydsl.codegen.DefaultEmbeddableSerializer\")\npublic class");
+        .containsIgnoringNewLines(
+            "@Generated(\"com.querydsl.codegen.DefaultEmbeddableSerializer\")\npublic class");
     CompileUtils.assertCompiles("QEntity", generatedSource);
   }
 
   @Test
   public void customGeneratedAnnotation() throws IOException {
-    SimpleType type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
-    EntityType entityType = new EntityType(type);
+    var type = new SimpleType(TypeCategory.ENTITY, "Entity", "", "Entity", false, false);
+    var entityType = new EntityType(type);
     typeMappings.register(entityType, queryTypeFactory.create(entityType));
 
     new DefaultEmbeddableSerializer(
@@ -226,9 +230,10 @@ public class EmbeddableSerializerTest {
             Collections.<String>emptySet(),
             com.querydsl.core.annotations.Generated.class)
         .serialize(entityType, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
-    String generatedSourceCode = writer.toString();
+    var generatedSourceCode = writer.toString();
     assertThat(generatedSourceCode)
-        .contains("@Generated(\"com.querydsl.codegen.DefaultEmbeddableSerializer\")\npublic class");
+        .containsIgnoringNewLines(
+            "@Generated(\"com.querydsl.codegen.DefaultEmbeddableSerializer\")\npublic class");
     CompileUtils.assertCompiles("QEntity", generatedSourceCode);
   }
 }
